[package]
name = "rbxlx2vmf"
version = "0.1.4"
edition = "2021"
publish = false

[dependencies]
clap = { version = "4.4.16" }
roxmltree = "0.19.0"
image = "0.24.8"
reqwest = { version = "0.11.23", features = ["json"] }
serde_json = "1.0.111"
flate2 = "1.0.28"
async-std = { version = "1.12.0", features = ["tokio1"] }
tokio = "1.35.1"