[package]
name = "rbxlx2vmf-web"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
rbxlx2vmf = { path = "../." }
wee_alloc = { version = "0.4.5" }
wasm-bindgen = "0.2.80"
wasm-bindgen-futures = "0.4.30"
js-sys = "0.3.57"
web-sys = { version = "0.3.57", features = ["Window", "Response", "ReadableStream"] }
zip = { version = "0.6.2", default-features = false }

[profile.release]
opt-level = "s"
