[package]
name = "rbxlx2vmf-web"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
rbxlx2vmf = { path = "../." }
wee_alloc = { version = "0.4.5" }
wasm-bindgen = "0.2.90"
wasm-bindgen-futures = "0.4.40"
js-sys = "0.3.67"
web-sys = { version = "0.3.67", features = [
    "Window",
    "Response",
    "ReadableStream"
] }
zip = { version = "0.6.6", default-features = false }
reqwest = { version = "0.11.23", features = ["json"] }

[profile.release]
opt-level = "s"
strip = "debuginfo"